--- a/pom.xml
+++ b/pom.xml
@@ -44,5 +44,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- Spring Aspects -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+            <version>4.3.12.RELEASE</version>
+        </dependency>
+
+
     </dependencies>
 </project>
